plugins/de.ovgu.featureide.fm.core/src/de/ovgu/featureide/fm/core/io/velvet/VelvetParser.java
// Generated from Velvet.g4 by ANTLR 4.13.2

package de.ovgu.featureide.fm.core.io.velvet;

import de.ovgu.featureide.fm.core.FMCorePlugin;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class VelvetParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, MANDATORY=2, ABSTRACT=3, SOMEOF=4, ONEOF=5, CONCEPT=6, CINTERFACE=7, 
		CONSTRAINT=8, FEATURE=9, USE=10, IMPORTINSTANCE=11, IMPORTINTERFACE=12, 
		DESCRIPTION=13, VAR_INT=14, VAR_FLOAT=15, VAR_STRING=16, VAR_BOOL=17, 
		SEMI=18, START_C=19, END_C=20, START_R=21, END_R=22, EQ=23, COMMA=24, 
		COLON=25, PLUS=26, MINUS=27, OP_NOT=28, OP_AND=29, OP_OR=30, OP_XOR=31, 
		OP_IMPLIES=32, OP_EQUIVALENT=33, ATTR_OP_EQUALS=34, ATTR_OP_NOT_EQUALS=35, 
		ATTR_OP_GREATER=36, ATTR_OP_LESS=37, ATTR_OP_GREATER_EQ=38, ATTR_OP_LESS_EQ=39, 
		EMPTY=40, CONSTR=41, ACONSTR=42, BASEEXT=43, DEF=44, GROUP=45, ATTR=46, 
		UNARYOP=47, OPERAND=48, BOOLEAN=49, ID=50, IDPath=51, INT=52, FLOAT=53, 
		STRING=54, WS=55, SL_COMMENT=56, ML_COMMENT=57;
	public static final int
		RULE_velvetModel = 0, RULE_imp = 1, RULE_concept = 2, RULE_cinterface = 3, 
		RULE_conceptBaseExt = 4, RULE_instanceImports = 5, RULE_interfaceImports = 6, 
		RULE_name = 7, RULE_definitions = 8, RULE_definition = 9, RULE_nonFeatureDefinition = 10, 
		RULE_use = 11, RULE_feature = 12, RULE_featureGroup = 13, RULE_groupType = 14, 
		RULE_description = 15, RULE_constraint = 16, RULE_constraintDefinition = 17, 
		RULE_constraintOperand = 18, RULE_attribute = 19, RULE_attributeConstraint = 20, 
		RULE_attribConstraint = 21, RULE_attribOperator = 22, RULE_attribNumInstance = 23, 
		RULE_intAttribute = 24, RULE_floatAttribute = 25, RULE_stringAttribute = 26, 
		RULE_boolAttribute = 27, RULE_unaryOp = 28, RULE_binaryOp = 29, RULE_attribRelation = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"velvetModel", "imp", "concept", "cinterface", "conceptBaseExt", "instanceImports", 
			"interfaceImports", "name", "definitions", "definition", "nonFeatureDefinition", 
			"use", "feature", "featureGroup", "groupType", "description", "constraint", 
			"constraintDefinition", "constraintOperand", "attribute", "attributeConstraint", 
			"attribConstraint", "attribOperator", "attribNumInstance", "intAttribute", 
			"floatAttribute", "stringAttribute", "boolAttribute", "unaryOp", "binaryOp", 
			"attribRelation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'mandatory'", "'abstract'", "'someOf'", "'oneOf'", 
			"'concept'", "'cinterface'", "'constraint'", "'feature'", "'use'", "'instance'", 
			"'interface'", "'description'", "'int'", "'float'", "'string'", "'bool'", 
			"';'", "'{'", "'}'", "'('", "')'", "'='", "','", "':'", "'+'", "'-'", 
			"'!'", "'&&'", "'||'", "'xor'", "'->'", "'<->'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='", "'EMPTY'", "'CONSTR'", "'ACONSTR'", "'BASEEXT'", 
			"'DEF'", "'GROUP'", "'ATTR'", "'UNARYOP'", "'OPERAND'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "MANDATORY", "ABSTRACT", "SOMEOF", "ONEOF", "CONCEPT", 
			"CINTERFACE", "CONSTRAINT", "FEATURE", "USE", "IMPORTINSTANCE", "IMPORTINTERFACE", 
			"DESCRIPTION", "VAR_INT", "VAR_FLOAT", "VAR_STRING", "VAR_BOOL", "SEMI", 
			"START_C", "END_C", "START_R", "END_R", "EQ", "COMMA", "COLON", "PLUS", 
			"MINUS", "OP_NOT", "OP_AND", "OP_OR", "OP_XOR", "OP_IMPLIES", "OP_EQUIVALENT", 
			"ATTR_OP_EQUALS", "ATTR_OP_NOT_EQUALS", "ATTR_OP_GREATER", "ATTR_OP_LESS", 
			"ATTR_OP_GREATER_EQ", "ATTR_OP_LESS_EQ", "EMPTY", "CONSTR", "ACONSTR", 
			"BASEEXT", "DEF", "GROUP", "ATTR", "UNARYOP", "OPERAND", "BOOLEAN", "ID", 
			"IDPath", "INT", "FLOAT", "STRING", "WS", "SL_COMMENT", "ML_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Velvet.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public class InternalSyntaxException extends RuntimeException{
		private final RecognitionException e;
		public InternalSyntaxException(RecognitionException e){
			this.e = e;	
		}
		
		public RecognitionException getException(){
			return e;
		}
	}

	public VelvetParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelvetModelContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(VelvetParser.EOF, 0); }
		public ConceptContext concept() {
			return getRuleContext(ConceptContext.class,0);
		}
		public CinterfaceContext cinterface() {
			return getRuleContext(CinterfaceContext.class,0);
		}
		public ImpContext imp() {
			return getRuleContext(ImpContext.class,0);
		}
		public VelvetModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velvetModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterVelvetModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitVelvetModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitVelvetModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelvetModelContext velvetModel() throws RecognitionException {
		VelvetModelContext _localctx = new VelvetModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_velvetModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(62);
				imp();
				}
			}

			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONCEPT:
				{
				setState(65);
				concept();
				}
				break;
			case CINTERFACE:
				{
				setState(66);
				cinterface();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImpContext extends ParserRuleContext {
		public List<TerminalNode> IMPORT() { return getTokens(VelvetParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(VelvetParser.IMPORT, i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(VelvetParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(VelvetParser.SEMI, i);
		}
		public ImpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterImp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitImp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitImp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpContext imp() throws RecognitionException {
		ImpContext _localctx = new ImpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				match(IMPORT);
				setState(72);
				name();
				setState(73);
				match(SEMI);
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConceptContext extends ParserRuleContext {
		public TerminalNode CONCEPT() { return getToken(VelvetParser.CONCEPT, 0); }
		public TerminalNode ID() { return getToken(VelvetParser.ID, 0); }
		public TerminalNode COLON() { return getToken(VelvetParser.COLON, 0); }
		public ConceptBaseExtContext conceptBaseExt() {
			return getRuleContext(ConceptBaseExtContext.class,0);
		}
		public InstanceImportsContext instanceImports() {
			return getRuleContext(InstanceImportsContext.class,0);
		}
		public InterfaceImportsContext interfaceImports() {
			return getRuleContext(InterfaceImportsContext.class,0);
		}
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public ConceptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concept; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterConcept(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitConcept(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitConcept(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConceptContext concept() throws RecognitionException {
		ConceptContext _localctx = new ConceptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_concept);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(CONCEPT);
			setState(80);
			match(ID);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(81);
				match(COLON);
				setState(82);
				conceptBaseExt();
				}
			}

			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(85);
				instanceImports();
				setState(86);
				interfaceImports();
				}
				break;
			case 2:
				{
				setState(88);
				interfaceImports();
				setState(89);
				instanceImports();
				}
				break;
			case 3:
				{
				setState(91);
				interfaceImports();
				}
				break;
			case 4:
				{
				setState(92);
				instanceImports();
				}
				break;
			}
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==START_C) {
				{
				setState(95);
				definitions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CinterfaceContext extends ParserRuleContext {
		public TerminalNode CINTERFACE() { return getToken(VelvetParser.CINTERFACE, 0); }
		public TerminalNode ID() { return getToken(VelvetParser.ID, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode COLON() { return getToken(VelvetParser.COLON, 0); }
		public ConceptBaseExtContext conceptBaseExt() {
			return getRuleContext(ConceptBaseExtContext.class,0);
		}
		public CinterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cinterface; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterCinterface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitCinterface(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitCinterface(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CinterfaceContext cinterface() throws RecognitionException {
		CinterfaceContext _localctx = new CinterfaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cinterface);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(CINTERFACE);
			setState(99);
			match(ID);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(100);
				match(COLON);
				setState(101);
				conceptBaseExt();
				}
			}

			setState(104);
			definitions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConceptBaseExtContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(VelvetParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(VelvetParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(VelvetParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(VelvetParser.COMMA, i);
		}
		public ConceptBaseExtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conceptBaseExt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterConceptBaseExt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitConceptBaseExt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitConceptBaseExt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConceptBaseExtContext conceptBaseExt() throws RecognitionException {
		ConceptBaseExtContext _localctx = new ConceptBaseExtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conceptBaseExt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ID);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(107);
				match(COMMA);
				setState(108);
				match(ID);
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstanceImportsContext extends ParserRuleContext {
		public TerminalNode IMPORTINSTANCE() { return getToken(VelvetParser.IMPORTINSTANCE, 0); }
		public List<TerminalNode> ID() { return getTokens(VelvetParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(VelvetParser.ID, i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(VelvetParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(VelvetParser.COMMA, i);
		}
		public InstanceImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceImports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterInstanceImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitInstanceImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitInstanceImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstanceImportsContext instanceImports() throws RecognitionException {
		InstanceImportsContext _localctx = new InstanceImportsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instanceImports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(IMPORTINSTANCE);
			setState(115);
			match(ID);
			setState(116);
			name();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(117);
				match(COMMA);
				setState(118);
				match(ID);
				setState(119);
				name();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceImportsContext extends ParserRuleContext {
		public TerminalNode IMPORTINTERFACE() { return getToken(VelvetParser.IMPORTINTERFACE, 0); }
		public List<TerminalNode> ID() { return getTokens(VelvetParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(VelvetParser.ID, i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(VelvetParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(VelvetParser.COMMA, i);
		}
		public InterfaceImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceImports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterInterfaceImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitInterfaceImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitInterfaceImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceImportsContext interfaceImports() throws RecognitionException {
		InterfaceImportsContext _localctx = new InterfaceImportsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interfaceImports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(IMPORTINTERFACE);
			setState(126);
			match(ID);
			setState(127);
			name();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(128);
				match(COMMA);
				setState(129);
				match(ID);
				setState(130);
				name();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(VelvetParser.ID, 0); }
		public TerminalNode IDPath() { return getToken(VelvetParser.IDPath, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==IDPath) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public TerminalNode START_C() { return getToken(VelvetParser.START_C, 0); }
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public TerminalNode END_C() { return getToken(VelvetParser.END_C, 0); }
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VelvetListener ) ((VelvetListener)listener).exitDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VelvetVisitor ) return ((VelvetVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_definitions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(START_C);
			setState(139);
			definition();
			setState(140);
			match(END_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
